--- a/index.html
+++ b/index.html
@@ -433,5 +433,66 @@
         </div>
       </div>
     </footer>
+    <div class="overlay">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">X</button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="model-label">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                name="user-name"
+                required
+                id="user-name"
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-person-black-1"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-phone" class="model-label">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                class="modal-input"
+                name="user-tel"
+                required
+                id="user-phone"
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-phone-black-2"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-mail" class="model-label">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                type="email"
+                class="modal-input"
+                name="user-mail"
+                required
+                id="user-mail"
+              />
+              <svg class="modal-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-email-black-3"></use>
+              </svg>
+            </div>
+          </div>
+          <label class="model-label" for="user-comment">Comment</label>
+          <textarea
+            name="user-commet"
+            id="user-comment"
+            class="modal-textarea"
+            placeholder="Text input"
+          ></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
