--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 placeholder="E-mail"
               />
             </label>
-            <button class="footer-btn" type="submit">
+            <button class="footer-sub-btn" type="submit">
               Subscribe
               <svg class="footer-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-sub-icon"></use>
