update css file

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-right">
+        <div class="footer-center">
           <p class="text-foot-second">Social media</p>
           <ul class="footer-icon-list">
             <li class="footer-icons-item">
@@ -431,7 +431,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-right">
           <p class="footer-form-text">Subscribe</p>
           <form class="footer-form">
             <label aria-label="footer-email" class="footer-label">
@@ -460,7 +460,6 @@
             <use href="./images/icons.svg#icon-close-black-4"></use>
           </svg>
         </button>
-
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-field">
@@ -473,7 +472,7 @@
                 required
                 id="user-name"
               />
-              <svg class="modal-icon" width="24" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-1"></use>
               </svg>
             </div>
@@ -488,7 +487,7 @@
                 required
                 id="user-phone"
               />
-              <svg class="modal-icon" width="24" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-2"></use>
               </svg>
             </div>
@@ -503,7 +502,7 @@
                 required
                 id="user-mail"
               />
-              <svg class="modal-icon" width="24" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-3"></use>
               </svg>
             </div>
@@ -511,27 +510,27 @@
           <div class="modal-field-area">
             <label class="model-label" for="user-comment">Comment</label>
             <textarea
-              name="user-commet"
+              name="user-comment"
               id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="">
+          <div class="modal-check-container">
             <input
               class="modal-check visually-hidden"
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <label for="policy" class="modal-check-text"
+            <label for="user-privacy" class="modal-check-text"
               ><span class="modal-check-box">
-                <svg class="modal-check-icon" width="10" height="10">
+                <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector-done"></use>
                 </svg> </span
               >I accept the terms and conditions of the&nbsp;
-              <a href="">Privacy Policy</a></label
+              <a class="modal-check-link" href="">Privacy Policy</a></label
             >
           </div>
           <button class="modal-send-btn" type="submit">Send</button>
