--- a/index.html
+++ b/index.html
@@ -524,11 +524,12 @@
               id="user-privacy"
               value="true"
             />
-            <label for="user-privacy" class="modal-check-text"
-              ><span class="modal-check-box">
+            <label for="user-privacy" class="modal-check-text">
+              <span class="modal-check-box">
                 <svg class="modal-check-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-vector-done"></use>
-                </svg> </span
+                  <use
+                    href="./images/icons.svg#icon-vector-done"
+                  ></use></svg></span
               >I accept the terms and conditions of the&nbsp;
               <a class="modal-check-link" href="">Privacy Policy</a></label
             >
