--- a/index.html
+++ b/index.html
@@ -527,12 +527,11 @@
             <label for="user-privacy" class="modal-check-text">
               <span class="modal-check-box">
                 <svg class="modal-check-icon" width="10" height="8">
-                  <use
-                    href="./images/icons.svg#icon-vector-done"
-                  ></use></svg></span
+                  <use href="./images/icons.svg#icon-vector-done"></use>
+                </svg> </span
               >I accept the terms and conditions of the&nbsp;
-              <a class="modal-check-link" href="">Privacy Policy</a></label
-            >
+              <a class="modal-check-link" href="">Privacy Policy</a>
+            </label>
           </div>
           <button class="modal-send-btn" type="submit">Send</button>
         </form>
