--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-vector-done"></use>
                 </svg> </span
-              >I accept the terms and conditions of the&nbsp;
+              >I accept the terms and conditions of the
               <a class="modal-check-link" href="">Privacy Policy</a>
             </label>
           </div>
